Updated banner header

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	<div>
 		<div class="header" >
 			<div>
-			<a  ng-href="#"><img  class="img-responsive" src="images/home.png" style="z-index: 100; cursor:pointer; position:absolute; width:70px;height:70px; right:0; margin:2% 3% 0 0; "></a>
-			<img src="images/seal.png" alt="Seal of the State of Washington." style="float:left; margin:2% 0 4% 0%;" class="img-responsive">
+			<a  ng-href="#"><img src="images/seal.png" alt="Seal of the State of Washington." style="margin:2% 0 4% 0%;" class="img-responsive"></a>
 			</div>
 		</div>
 	</div>
